--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -7,6 +7,21 @@
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
+      <header class="container mx-auto py-[20px] justify-between flex text-[#FFFFFF] ">
+        <div class="flex gap-[30px] w-[250px]">
+            <img src="./img/index.img/hero icon 1.png" alt="">
+            <img src="./img/index.img/hero  icon2.png" alt="">
+            <h1> 8 981 120-11-17</h1>
+        </div>
+        <div>
+             <img src="./img/index.img/hero.png" alt="">
+        </div>
+        <div class="flex gap-[30px] sm:block hidden  ">
+            <img src="./img/index.img/hero icon3.png" alt="">
+            <img src="./img/index.img/hero icon4.png" alt="">
+            <img src="./img/index.img/hero icon5.png" alt="">
+        </div>
+    </header>
      <main class="bg-[#373737]">
         <section class="bg-[url(/images/img.png)] bg-cover bg-no-repeat">
             <div class="container mx-auto text-center py-55">
